7月リリース分（Slack連携はマルチワークスペース対応）
